--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@uiw/react-json-view": "^2.0.0-alpha.24",
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
+    "codemirror": "^5.65.16",
     "framer-motion": "^11.2.5",
+    "jsoneditor": "^10.0.3",
     "react": "^18.2.0",
+    "react-codemirror2": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-json-editor-ajrm": "^2.5.9",
+    "react-json-viewer": "^3.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.7"
@@ -24,6 +30,7 @@
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/react-json-editor-ajrm": "^2.5.6",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
