--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-codemirror2": "^8.0.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-json-editor-ajrm": "^2.5.9",
