--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@uiw/react-json-view": "^2.0.0-alpha.24",
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
@@ -22,10 +24,12 @@
     "react-codemirror2": "^8.0.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-json-editor-ajrm": "^2.5.9",
     "react-json-viewer": "^3.0.1",
     "react-modal": "^3.16.1",
+    "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.7"
   },
