--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-json-editor-ajrm": "^2.5.9",
     "react-json-viewer": "^3.0.1",
     "react-modal": "^3.16.1",
+    "react-moment": "^1.1.3",
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3",
     "recharts": "^2.12.7"
