--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
     "codemirror": "^5.65.16",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.2.5",
     "jsoneditor": "^10.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-codemirror2": "^8.0.0",
@@ -32,7 +35,9 @@
     "react-moment": "^1.1.3",
     "react-pdf": "^8.0.2",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
